Added dist folder to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /.metadata/
 /.recommenders/
 /RemoteSystemsTempFiles
-/user-login-ui/node_modules
 /user-login-server/bin
 /user-login-server/target
+/user-login-ui/node_modules
+/user-login-ui/dist
