--- a/user-login-ui/package.json
+++ b/user-login-ui/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "ng2-datetime-picker": "^0.15.1",
+    "ngx-bootstrap": "^1.8.1",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
