Modified package json to use lower version of angular libraryfrom 4.0.0 to 3.4.7, Modified build process for user-login-server to copy resources from user-login-ui, removed vertical border appearing left side of form once ng-valid is true.

--- a/user-login-server/pom.xml
+++ b/user-login-server/pom.xml
@@ -61,10 +61,10 @@
 							<goal>copy-resources</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${project.build.outputDirectory}/static</outputDirectory>
+							<outputDirectory>${project.basedir}/src/main/resources/static</outputDirectory>
 							<resources>
 								<resource>
-									<directory>${basedir}/../angular-ui/target/classes/static</directory>
+									<directory>${basedir}/../user-login-ui/dist</directory>
 									<filtering>false</filtering>
 								</resource>
 							</resources>
