--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/.vscode
 /.metadata/
 /.recommenders/
 /RemoteSystemsTempFiles
@@ -8,4 +9,4 @@
 /user-login-ui/node_modules
 /user-login-ui/dist
 /user-login-ui/target
-user-login-server/log/application.log
+/user-login-server/log/application.log
